--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,37 +1,42 @@
-<header class="p-3 text-bg-primary">
-  <div class="container">
-  <div class="d-flex flex-wrap align-items-center justify-content-center
-  justify-content-lg-start">
-  <a routerLink="" class="d-flex align-items-center mb-2 mb-lg-0 text-white
-  text-decoration-none">
+<header data-bs-theme="dark">
+  <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">Clinica Salud y Vida</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarCollapse">
+        <ul class="navbar-nav me-auto mb-2 mb-md-0">
+          <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
+            <li><a routerLink="/inicio" class="nav-link px-2 text-white">Inicio</a></li>
+            <li><a routerLink="/gestion-medicos" class="nav-link px-2 text-white">Gestión médicos</a></li>
+            <li><a routerLink="" class="nav-link px-2 text-white">Gestión PQRS</a></li>
+            <li><a routerLink="" class="nav-link px-2 text-white">Gestión Citas</a></li>
+          </ul>
+        </ul>
+        <div class="text-end">
+          <button type="button" routerLink="/login" class="btn btn-outline-light
+          
+          me-2">Iniciar sesión</button>
+          
+          <button type="button" routerLink="/registro" class="btn
+          
+          btn-success">Registrarse</button>
+      </div>
+      </div>
+      </div>
+  </nav>
+</header>
+
   
-  <i class="fa-solid fa-stethoscope fs-3"></i>
-  <span class="fs-4 ms-3 me-3">{{title}}</span>
-  </a>
-  <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-  <li><a routerLink="" class="nav-link px-2 text-white">Inicio</a></li>
-  <li><a routerLink="" class="nav-link px-2 text-white">Gestión médicos</a></li>
-  <li><a routerLink="" class="nav-link px-2 text-white">Gestión PQRS</a></li>
-  <li><a routerLink="" class="nav-link px-2 text-white">Gestión Citas</a></li>
-  </ul>
-  <div class="text-end">
-  <button type="button" routerLink="/login" class="btn btn-outline-light
-  
-  me-2">Login</button>
-  
-  <button type="button" routerLink="/registro" class="btn
-  
-  btn-success">Sign-up</button>
-  </div>
-  </div>
-  </div>
-  </header>
+
   <div class="seccion-pagina p-4">
   <div class="container">
   <router-outlet></router-outlet>
   </div>
   </div>
-  <div class="container">
+  <!-- Segemente del Footer
+    <div class="container">
     <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4
 border-top">
 <div class="col-md-4 d-flex align-items-center">
@@ -47,3 +52,4 @@ fs-5"></i></a></li>
 </ul>
 </footer>
 </div>
+  Fin segmento del Footer-->
