--- a/src/app/pagina/inicio/inicio.component.html
+++ b/src/app/pagina/inicio/inicio.component.html
@@ -67,8 +67,8 @@
         <div class="collapse navbar-collapse" id="navbarCollapse">
           <ul class="navbar-nav me-auto mb-2 mb-md-0">
             <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-              <li><a routerLink="" class="nav-link px-2 text-white">Inicio</a></li>
-              <li><a routerLink="" class="nav-link px-2 text-white">Gestión médicos</a></li>
+              <li><a routerLink="/inicio" class="nav-link px-2 text-white">Inicio</a></li>
+              <li><a routerLink="/gestion-medicos" class="nav-link px-2 text-white">Gestión médicos</a></li>
               <li><a routerLink="" class="nav-link px-2 text-white">Gestión PQRS</a></li>
               <li><a routerLink="" class="nav-link px-2 text-white">Gestión Citas</a></li>
             </ul>
@@ -76,11 +76,11 @@
           <div class="text-end">
             <button type="button" routerLink="/login" class="btn btn-outline-light
             
-            me-2">Login</button>
+            me-2">Iniciar sesión</button>
             
             <button type="button" routerLink="/registro" class="btn
             
-            btn-success">Sign-in</button>
+            btn-success">Registrarse</button>
         </div>
         </div>
         </div>
@@ -159,7 +159,7 @@
         </svg>
         <h2 class="fw-normal">Nuestras sedes</h2>
         <p>Obtén informacion sobre nuestras distintas instalaciones.</p>
-        <p><a class="btn btn-lg btn-primary" href="#">Ver más</a></p>
+        <p><a class="btn btn-lg btn-primary button-effect" href="#sedes">Ver más</a></p>
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-4">
         <svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" fill="currentColor" class="bi bi-heart-pulse" viewBox="0 0 16 16" style="margin-top: 50; margin-left: 50; text-align: center;">
@@ -168,7 +168,7 @@
         </svg>
         <h2 class="fw-normal">Nuestras especializaciones</h2>
         <p style="margin-left: 20;">Entérate de nuestro enfoque.</p>
-        <p><a class="btn btn-lg btn-primary" href="#">Ver más</a></p>
+        <p><a class="btn btn-lg btn-primary button-effect" href="#">Ver más</a></p>
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-4">
         <svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" fill="currentColor" class="bi bi-person-lines-fill" viewBox="0 0 16 16" style="margin-top: 50; margin-left: 50; text-align: center;">
@@ -176,7 +176,7 @@
         </svg>
         <h2 class="fw-normal">Nuestros médicos</h2>
         <p>Conoce a nuestros profesionales de la salud.</p>
-        <p><a class="btn btn-lg btn-primary" href="#">Ver más</a></p>
+        <p><a class="btn btn-lg btn-primary button-effect" href="#">Ver más</a></p>
       </div><!-- /.col-lg-4 -->
     </div><!-- /.row -->
 
@@ -186,12 +186,12 @@
     <hr class="featurette-divider">
 
     <div class="row featurette">
-      <div class="col-md-7">
-        <h2 class="featurette-heading fw-normal lh-1">Sede principal: Armenia <span class="text-body-secondary"></span></h2>
+      <div class="col-md-7" id="sedes">
+        <h2 class="featurette-heading fw-normal lh-1" style="margin-top: 100px;">Sede principal: Armenia <span class="text-body-secondary"></span></h2>
         <p class="lead">Así se ve nuestra sede principal ubicada en Armenia. De esta manera podrás reconocernos fácilmente </p>
       </div>
       <div class="col-md-5">
-        <img src="assets/Imagenes/clinicaSede.jpeg" alt="Imagen" width="100%" height="500px">
+        <img src="assets/Imagenes/clinicaSede.jpeg" alt="Imagen" width="100%" height="500px" class="image-effect">
       </div>
     </div>
 
@@ -203,7 +203,7 @@
         <p class="lead">Esta es la sede que suministra nuestra atención de calidad en la ciudad de Pereira y aledaños.</p>
       </div>
       <div class="col-md-5 order-md-1">
-        <img src="assets/Imagenes/clinicaSede2.jpeg" alt="Imagen" width="100%" height="500px">
+        <img src="assets/Imagenes/clinicaSede2.jpeg" alt="Imagen" width="100%" height="500px" class="image-effect">
       </div>
     </div>
 
@@ -215,7 +215,7 @@
         <p class="lead">En la capital de la felicidad también prestamos nuestro servicio para seguir llenando de sonrisas a los caleños</p>
       </div>
       <div class="col-md-5">
-        <img src="assets/Imagenes/clinicaSede3.jpeg" alt="Imagen" width="100%" height="500px">
+        <img src="assets/Imagenes/clinicaSede3.jpeg" alt="Imagen" width="100%" height="500px" class="image-effect">
       </div>
     </div>
 
