--- a/src/app/pagina/registro/registro.component.html
+++ b/src/app/pagina/registro/registro.component.html
@@ -1,4 +1,63 @@
-<form #f="ngForm" (ngSubmit)="registrar()">
+<!---------------INICIO ICONOS DE BOTON OSCURO----------------------->
+
+<svg xmlns="http://www.w3.org/2000/svg" class="d-none">
+    <symbol id="check2" viewBox="0 0 16 16">
+      <path d="M13.854 3.646a.5.5 0 0 1 0 .708l-7 7a.5.5 0 0 1-.708 0l-3.5-3.5a.5.5 0 1 1 .708-.708L6.5 10.293l6.646-6.647a.5.5 0 0 1 .708 0z"/>
+    </symbol>
+    <symbol id="circle-half" viewBox="0 0 16 16">
+      <path d="M8 15A7 7 0 1 0 8 1v14zm0 1A8 8 0 1 1 8 0a8 8 0 0 1 0 16z"/>
+    </symbol>
+    <symbol id="moon-stars-fill" viewBox="0 0 16 16">
+      <path d="M6 .278a.768.768 0 0 1 .08.858 7.208 7.208 0 0 0-.878 3.46c0 4.021 3.278 7.277 7.318 7.277.527 0 1.04-.055 1.533-.16a.787.787 0 0 1 .81.316.733.733 0 0 1-.031.893A8.349 8.349 0 0 1 8.344 16C3.734 16 0 12.286 0 7.71 0 4.266 2.114 1.312 5.124.06A.752.752 0 0 1 6 .278z"/>
+      <path d="M10.794 3.148a.217.217 0 0 1 .412 0l.387 1.162c.173.518.579.924 1.097 1.097l1.162.387a.217.217 0 0 1 0 .412l-1.162.387a1.734 1.734 0 0 0-1.097 1.097l-.387 1.162a.217.217 0 0 1-.412 0l-.387-1.162A1.734 1.734 0 0 0 9.31 6.593l-1.162-.387a.217.217 0 0 1 0-.412l1.162-.387a1.734 1.734 0 0 0 1.097-1.097l.387-1.162zM13.863.099a.145.145 0 0 1 .274 0l.258.774c.115.346.386.617.732.732l.774.258a.145.145 0 0 1 0 .274l-.774.258a1.156 1.156 0 0 0-.732.732l-.258.774a.145.145 0 0 1-.274 0l-.258-.774a1.156 1.156 0 0 0-.732-.732l-.774-.258a.145.145 0 0 1 0-.274l.774-.258c.346-.115.617-.386.732-.732L13.863.1z"/>
+    </symbol>
+    <symbol id="sun-fill" viewBox="0 0 16 16">
+      <path d="M8 12a4 4 0 1 0 0-8 4 4 0 0 0 0 8zM8 0a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-1 0v-2A.5.5 0 0 1 8 0zm0 13a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-1 0v-2A.5.5 0 0 1 8 13zm8-5a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1 0-1h2a.5.5 0 0 1 .5.5zM3 8a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1 0-1h2A.5.5 0 0 1 3 8zm10.657-5.657a.5.5 0 0 1 0 .707l-1.414 1.415a.5.5 0 1 1-.707-.708l1.414-1.414a.5.5 0 0 1 .707 0zm-9.193 9.193a.5.5 0 0 1 0 .707L3.05 13.657a.5.5 0 0 1-.707-.707l1.414-1.414a.5.5 0 0 1 .707 0zm9.193 2.121a.5.5 0 0 1-.707 0l-1.414-1.414a.5.5 0 0 1 .707-.707l1.414 1.414a.5.5 0 0 1 0 .707zM4.464 4.465a.5.5 0 0 1-.707 0L2.343 3.05a.5.5 0 1 1 .707-.707l1.414 1.414a.5.5 0 0 1 0 .708z"/>
+    </symbol>
+  </svg>
+<!------------------------- FIN ICONOS DE BOTON OSCURO------------------------->
+
+
+ <!--Botón-->
+ <div class="dropdown position-fixed bottom-0 end-0 mb-3 me-3 bd-mode-toggle">
+    <button class="btn btn-bd-primary py-2 dropdown-toggle d-flex align-items-center"
+            id="bd-theme"
+            type="button"
+            aria-expanded="false"
+            data-bs-toggle="dropdown"
+            aria-label="Toggle theme (auto)"
+            style="z-index: 1;">
+      <svg class="bi my-1 theme-icon-active" width="1em" height="1em"><use href="#circle-half"></use></svg>
+      <span class="visually-hidden" id="bd-theme-text">Toggle theme</span>
+    </button>
+    <ul class="dropdown-menu dropdown-menu-end shadow" aria-labelledby="bd-theme-text">
+      <li>
+        <button type="button" class="dropdown-item d-flex align-items-center" data-bs-theme-value="light" aria-pressed="false">
+          <svg class="bi me-2 opacity-50 theme-icon" width="1em" height="1em"><use href="#sun-fill"></use></svg>
+          Light
+          <svg class="bi ms-auto d-none" width="1em" height="1em"><use href="#check2"></use></svg>
+        </button>
+      </li>
+      <li>
+        <button type="button" class="dropdown-item d-flex align-items-center" data-bs-theme-value="dark" aria-pressed="false">
+          <svg class="bi me-2 opacity-50 theme-icon" width="1em" height="1em"><use href="#moon-stars-fill"></use></svg>
+          Dark
+          <svg class="bi ms-auto d-none" width="1em" height="1em"><use href="#check2"></use></svg>
+        </button>
+      </li>
+      <li>
+        <button type="button" class="dropdown-item d-flex align-items-center active" data-bs-theme-value="auto" aria-pressed="true">
+          <svg class="bi me-2 opacity-50 theme-icon" width="1em" height="1em"><use href="#circle-half"></use></svg>
+          Auto
+          <svg class="bi ms-auto d-none" width="1em" height="1em"><use href="#check2"></use></svg>
+        </button>
+      </li>
+    </ul>
+  </div>
+<!-------------------------------------------------------------- FIN BOTON------------------------------------------------->
+
+<!----------------------------------------------------------FORMULARIO DE REGISTRO----------------------------------------->
+<form #f="ngForm" (ngSubmit)="registrar()" style="margin-top: 50px ; z-index: 0; " >
     <div class="card">
         <div class="card-header ps-5 pt-4 pb-4">
             <h5 class="mb-0"><i class="fa-solid fa-user-plus me-3"></i>Registro de un nuevo
@@ -67,31 +126,58 @@
                             [(ngModel)]="registroPacienteDTO.nombre" />
                     </div>
                 </div>
-                <div>
-                    <label>EPS: </label>
-                    <input type="text" name="eps" [(ngModel)]="registroPacienteDTO.eps" />
+                <div class="mb-3 row">
+                    <label class="col-sm-2 col-form-label">EPS: </label>
+                    <div class="col-sm-10">
+                        <select name="ciudad" required class="form-select" [(ngModel)]="registroPacienteDTO.eps">
+                            <option value="" selected>Seleccione su EPS</option>
+                            <option [value]="item" *ngFor="let item of eps; index as i">{{item}}</option>
+                        </select>
+                    </div>
                 </div>
-                <div>
-                    <label>Tipo de sangre: </label>
-                    <input type="text" name="tipoSangre" [(ngModel)]="registroPacienteDTO.tipoSangre" />
+                <div class="mb-3 row">
+                    <label class="col-sm-2 col-form-label">Tipo de sangre: </label>
+                    <div class="col-sm-10">
+                        <select name="ciudad" required class="form-select" [(ngModel)]="registroPacienteDTO.tipoSangre">
+                            <option value="" selected>Seleccione su tipo de sangre</option>
+                            <option [value]="item" *ngFor="let item of tipoSangre; index as i">{{item}}</option>
+                        </select>
+                    </div>
                 </div>
-                <div>
-                    <label>Correo electrónico: </label>
-                    <input type="email" name="correo" [(ngModel)]="registroPacienteDTO.correo" />
+                <div class="mb-3 row">
+                    <label class="col-sm-2 col-form-label">Correo Electrónico: </label>
+                    <div class="col-sm-10">
+                        <input #correo="ngModel"
+                            [ngClass]="correo.invalid && (correo.dirty || correo.touched) ? 'is-invalid' : ''"
+                            type="text" name="correo" class="form-control" required
+                            [(ngModel)]="registroPacienteDTO.correo" />
+                    </div>
                 </div>
-                <div>
-                    <label>Contraseña: </label>
-                    <input type="password" name="password" [(ngModel)]="registroPacienteDTO.password" />
+                <div class="mb-3 row">
+                    <label class="col-sm-2 col-form-label">Contraseña: </label>
+                    <div class="col-sm-10">
+                        <input #password="ngModel"
+                            [ngClass]="password.invalid && (password.dirty || password.touched) ? 'is-invalid' : ''"
+                            type="text" name="password" class="form-control" required
+                            [(ngModel)]="registroPacienteDTO.password" />
+                    </div>
                 </div>
 
+                <div class="mb-3 row">
+                    <label class="col-sm-2 col-form-label">Confirmar contraseña: </label>
+                    <div class="col-sm-10">
+                        <input #password = "ngModel" 
+                        type="password" name="confirmaPassword" [(ngModel)]="registroPacienteDTO.confirmaPassword"
+                        required />
+                    </div>
+                </div>
             </form>
-            <div>
-                <label>Repetir contraseña: </label>
-                <input type="password" name="confirmaPassword" [(ngModel)]="registroPacienteDTO.confirmaPassword"
-                    required />
-            </div>
+            
             <div class="alert alert-danger" role="alert" *ngIf="!sonIguales()">Las contraseñas no
                 coinciden</div>
-                <button class="btn btn-primary" type="submit" [disabled]="f.invalid || !sonIguales()">
-                <i class="fa-solid fa-circle-plus me-1"></i>Registrarse
-                </button>
+                <div style="display: flex; justify-content: center;">
+                    <button class="btn btn-success button-effect" type="submit" [disabled]="f.invalid || !sonIguales()">
+                        <i class="fa-solid fa-circle-plus me-1"></i>Registrarse
+                    </button>
+                </div>
+<!-----------------------------------FORMULARIO DE REGISTRO----------------------------------------------------------------->                
