--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,7 @@
           <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
             <li><a routerLink="/inicio" class="nav-link px-2 text-white">Inicio</a></li>
             <li><a routerLink="/gestion-medicos" class="nav-link px-2 text-white">Gestión médicos</a></li>
-            <li><a routerLink="" class="nav-link px-2 text-white">Gestión PQRS</a></li>
+            <li><a routerLink="/gestion-pqrs" class="nav-link px-2 text-white">Gestión PQRS</a></li>
             <li><a routerLink="" class="nav-link px-2 text-white">Gestión Citas</a></li>
           </ul>
         </ul>
@@ -28,28 +28,8 @@
   </nav>
 </header>
 
-  
-
   <div class="seccion-pagina p-4">
   <div class="container">
   <router-outlet></router-outlet>
   </div>
   </div>
-  <!-- Segemente del Footer
-    <div class="container">
-    <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4
-border-top">
-<div class="col-md-4 d-flex align-items-center">
-<span class="mb-3 mb-md-0 text-muted">&copy; 2023 Universidad del Quindío</span>
-</div>
-<ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
-<li class="ms-3"><a class="text-muted" href="#"><i class="fa-brands fa-x-twitter
-fs-5"></i></a></li>
-<li class="ms-3"><a class="text-muted" href="#"><i class="fa-brands fa-instagram
-fs-5"></i></a></li>
-<li class="ms-3"><a class="text-muted" href="#"><i class="fa-brands fa-facebook
-fs-5"></i></a></li>
-</ul>
-</footer>
-</div>
-  Fin segmento del Footer-->
