--- a/src/app/pagina/gestion-medicos/gestion-medicos.component.html
+++ b/src/app/pagina/gestion-medicos/gestion-medicos.component.html
@@ -98,6 +98,7 @@
               <li><a routerLink="" class="nav-link px-2 text-white">Gestión médicos</a></li>
               <li><a routerLink="" class="nav-link px-2 text-white">Gestión PQRS</a></li>
               <li><a routerLink="" class="nav-link px-2 text-white">Gestión Citas</a></li>
+              <li><a routerLink="/calendario" class="nav-link px-2 text-white">Calendario</a></li>
             </ul>
           </ul>
           <div class="dropdown text-end">
