--- a/src/app/pagina/registro/registro.component.html
+++ b/src/app/pagina/registro/registro.component.html
@@ -90,7 +90,7 @@
                         <input #telefono="ngModel"
                             [ngClass]="telefono.invalid && (telefono.dirty || telefono.touched) ? 'is-invalid' : ''"
                             type="text" name="telefono" class="form-control" required
-                            [(ngModel)]="registroPacienteDTO.cedula" />
+                            [(ngModel)]="registroPacienteDTO.telefono" />
                     </div>
 
                 </div>
