--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,6 +12,7 @@
             <li><a routerLink="/gestion-medicos" class="nav-link px-2 text-white">Gestión médicos</a></li>
             <li><a routerLink="" class="nav-link px-2 text-white">Gestión PQRS</a></li>
             <li><a routerLink="" class="nav-link px-2 text-white">Gestión Citas</a></li>
+            <li><a routerLink="/gestion-pqrs" class="nav-link px-2 text-white">Gestión PQRS</a></li>
           </ul>
         </ul>
         <div class="text-end">
