--- a/src/app/pagina/login/login.component.html
+++ b/src/app/pagina/login/login.component.html
@@ -87,7 +87,8 @@
                 Guardar contraseña
             </label>
         </div>
-        <a href="ruta-a-tu-pagina-de-recuperacion-de-contrasena" class="text-decoration-none">¿Olvidaste tu contraseña?</a>
+        <a href="/olvido-contrasenia" class="text-decoration-none">¿Olvidaste tu contraseña?</a>
+
     </div>
     <button class="btn btn-primary w-100 py-2 button-effect" type="submit">Iniciar sesión</button>
     <p class="mt-5 mb-3 text-body-secondary">&copy; 2023</p>
