Union gestion medico

--- a/src/app/pagina/gestion-medicos/gestion-medicos.component.html
+++ b/src/app/pagina/gestion-medicos/gestion-medicos.component.html
@@ -290,9 +290,8 @@
             </svg>
           </div>
           <h3 class="fs-2 text-body-emphasis">Gestión de días libres</h3>
-          <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and
-            probably just keep going until we run out of words.</p>
-          <p><a class="btn btn-lg btn-primary button-effect" href="#">Saber más</a></p>
+          <p>Seleccina un dia para descansar</p>
+          <p><a class="btn btn-lg btn-primary button-effect" href="/gestion-dia-libre">Selecciona dia</a></p>
         </div>
         <div class="feature col">
           <div
@@ -301,10 +300,9 @@
               <use xlink:href="#toggles2" />
             </svg>
           </div>
-          <h3 class="fs-2 text-body-emphasis">Featured title</h3>
-          <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and
-            probably just keep going until we run out of words.</p>
-          <p><a class="btn btn-lg btn-primary button-effect" href="#">Saber más</a></p>
+          <h3 class="fs-2 text-body-emphasis">Atender citas</h3>
+          <p>Atiende las citas que tiene pendientes por atender el dia de hoy</p>
+          <p><a class="btn btn-lg btn-primary button-effect" href="/lista-atender-cita">Atender</a></p>
         </div>
       </div>
     </div>
@@ -479,11 +477,11 @@
           </div>
         </div>
         <div class="col d-flex align-items-start">
-          <svg class="bi text-body-secondary flex-shrink-0 me-3" width="1.75em" height="1.75em">
+          <svg class="bi text-body-secondary flex-shrink-0 me-3" width="1.9em" height="1.75em">
             <use xlink:href="#calendar3" />
           </svg>
           <div>
-            <h3 class="fw-bold mb-0 fs-4 text-body-emphasis">Featured title</h3>
+            <h3 class="fw-bold mb-0 fs-4 text-body-emphasis">Featured 2title</h3>
             <p>Paragraph of text beneath the heading to explain the heading.</p>
           </div>
         </div>
