--- a/src/app/pagina/inicio/inicio.component.html
+++ b/src/app/pagina/inicio/inicio.component.html
@@ -70,7 +70,7 @@
               <li><a routerLink="/inicio" class="nav-link px-2 text-white">Inicio</a></li>
               <li><a routerLink="/gestion-medicos" class="nav-link px-2 text-white">Gestión médicos</a></li>
               <li><a routerLink="/gestion-pqrs" class="nav-link px-2 text-white">Gestión PQRS</a></li>
-              <li><a routerLink="/ges" class="nav-link px-2 text-white">Gestión Citas</a></li>
+              <li><a routerLink="/gestion-citas" class="nav-link px-2 text-white">Gestión Citas</a></li>
             </ul>
           </ul>
           <div class="text-end">
