--- a/src/app/pagina/login/login.component.html
+++ b/src/app/pagina/login/login.component.html
@@ -72,11 +72,11 @@
     <h1 class="h3 mb-3 fw-normal">Por favor inicia sesión</h1>
 
     <div class="form-floating">
-      <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+      <input type="email" name="correo" [(ngModel)]="loginDTO.correo" class="form-control" id="floatingInput" placeholder="name@example.com">
       <label for="floatingInput">Correo Electrónico</label>
     </div>
     <div class="form-floating">
-      <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
+      <input type="password" name="password" [(ngModel)]="loginDTO.password" class="form-control" id="floatingPassword" placeholder="Password">
       <label for="floatingPassword">Contraseña</label>
     </div>
 
@@ -89,7 +89,7 @@
         </div>
         <a href="ruta-a-tu-pagina-de-recuperacion-de-contrasena" class="text-decoration-none">¿Olvidaste tu contraseña?</a>
     </div>
-    <button class="btn btn-primary w-100 py-2 button-effect" type="submit">Iniciar sesión</button>
+    <button class="btn btn-primary w-100 py-2 button-effect" routerLink="/inicio" type="submit">Iniciar sesión</button>
     <p class="mt-5 mb-3 text-body-secondary">&copy; 2023</p>
   </form>
 </main>
