gestion pqrs- vistas paciente

--- a/src/app/pagina/login/login.component.html
+++ b/src/app/pagina/login/login.component.html
@@ -89,8 +89,8 @@
         </div>
         <a href="ruta-a-tu-pagina-de-recuperacion-de-contrasena" class="text-decoration-none">¿Olvidaste tu contraseña?</a>
     </div>
-    <button class="btn btn-primary w-100 py-2 button-effect" routerLink="/inicio" type="submit">Iniciar sesión</button>
-    <p class="mt-5 mb-3 text-body-secondary">&copy; 2023</p>
+    <button class="btn btn-primary w-100 py-2 button-effect" routerLink="/inicio-paciente" type="submit">Iniciar sesión</button>
+    
   </form>
 </main>
 <script src="/assets/js/bootstrap.bundle.min.js"></script>
