GestionCitas y detalle citas

--- a/src/app/pagina/gestion-citas/gestion-citas.component.html
+++ b/src/app/pagina/gestion-citas/gestion-citas.component.html
@@ -116,7 +116,7 @@
         </td>
         <td>
           
-          <a href="/info-cita" class="text-decoration-none">Ver detalle</a>
+          <a href="/info-citas" class="text-decoration-none">Ver detalle</a>
   
           
       </td>
