--- a/src/app/pagina/inicio-paciente/inicio-paciente.component.html
+++ b/src/app/pagina/inicio-paciente/inicio-paciente.component.html
@@ -69,7 +69,7 @@
             <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
               <li><a routerLink="/inicio" class="nav-link px-2 text-white">Inicio</a></li>
               <li><a routerLink="/gestion-pqrs" class="nav-link px-2 text-white">Gestión PQRS</a></li>
-              <li><a routerLink="/gestion-cita" class="nav-link px-2 text-white">Gestión Citas</a></li>
+              <li><a routerLink="/gestion-citas" class="nav-link px-2 text-white">Gestión Citas</a></li>
             </ul>
           </ul>
           <div class="text-end">
