--- a/src/app/pagina/modulo-usuario/modulo-usuario.component.html
+++ b/src/app/pagina/modulo-usuario/modulo-usuario.component.html
@@ -23,7 +23,7 @@
           me-2">Editar informacion personal</button>
           
             
-          <button type="button" routerLink="/info-citas" class="btn btn-outline-light
+          <button type="button" routerLink="/gestion-citas" class="btn btn-outline-light
           me-2">Ver informacion citas</button>
 
           
