Atender cita funcional

--- a/src/app/pagina/atender-cita/atender-cita.component.html
+++ b/src/app/pagina/atender-cita/atender-cita.component.html
@@ -3,42 +3,12 @@
         <h3 class="mb-3"><i class="fa-solid fa-file-circle-plus me-2"></i>Atender citas</h3>
     </div>
     <div class="card-body p-5" style="margin-bottom: 300px;">
-        <div class="mb-4 row">
-            <label class="col-sm-2 col-form-label">Nombre: </label>
-            <div class="col-sm-10">
-                <input type="text" name="nombrePaciente" class="form-control" />
-            </div>
-        </div>
-        <div class="mb-4 row">
-            <label class="col-sm-2 col-form-label">Cedula: </label>
-            <div class="col-sm-10">
-                <input type="number" name="cedulaPaciente" class="form-control" />
-            </div>
-        </div>
-        <div class="mb-4 row">
-            <label class="col-sm-2 col-form-label">Edad: </label>
-            <div class="col-sm-10">
-                <input type="number" name="edad" class="form-control" />
-            </div>
-        </div>
-        <div class="mb-4 row">
-            <label class="col-sm-2 col-form-label">Genero: </label>
-            <div class="col-sm-10">
-                <input type="text" name="genero" class="form-control" />
-            </div>
-        </div>  
-        <div class="mb-4 row">
-            <label class="col-sm-2 col-form-label">Peso: </label>
-            <div class="col-sm-10">
-                <input type="text" name="peso" class="form-control" />
-            </div>
-        </div>
-        <div class="mb-4 row">
-            <label class="col-sm-2 col-form-label">Altura: </label>
-            <div class="col-sm-10">
-                <input type="number" name="altura" class="form-control" />
-            </div>
-        </div>
+       
+       
+        
+         
+        
+     
         <div class="mb-4 row">
             <label class="col-sm-2 col-form-label">Diagnostico: </label>
             <div class="col-sm-10">
@@ -46,19 +16,25 @@
             </div>
         </div>
         <div class="mb-4 row">
-            <label class="col-sm-2 col-form-label">Sintomas: </label>
+            <label class="col-sm-2 col-form-label">Notas Medicas: </label>
             <div class="col-sm-10">
-                <input type="text" name="sintomas" class="form-control" />
+                <input type="text" name="notas medicas" class="form-control" />
             </div>
         </div>
         <div class="mb-4 row">
             <label class="col-sm-2 col-form-label">Tratamiento: </label>
             <div class="col-sm-10">
-                <input type="text" name="tratameinto" class="form-control" />
+                <input type="text" name="tratamiento" class="form-control" />
             </div>
+            <div class="mb-4 row">
+                <label class="col-sm-2 col-form-label">Codigo Cita: </label>
+                <div class="col-sm-10">
+                    <input type="text" name="codigo cita" class="form-control" />
+                </div>
         </div>
         <div style="display: flex; justify-content: end">
-            <button type="submit" class="btn btn-lg btn-primary button-effect" > Guardar </button>
-
+            <button class="btn btn-success button-effect" type="submit">
+                <i class="fa-solid fa-circle-plus me-1"></i>Guardar
+            </button>
         </div>
     </div>
