--- a/src/app/pagina/calendario/calendario.component.html
+++ b/src/app/pagina/calendario/calendario.component.html
@@ -10,39 +10,34 @@
             <thead>
                 <tr>
                     <th>Código Cita</th>
-                    <th>Cedula Paciente</th>
                     <th>Nombre Paciente</th>
-                    <th>Nombre Medico</th>
-                    <th>Especialidad</th>
-                    <th>Estado de la Cita</th>
+                    <th>Motivo</th>
                     <th>Fecha</th>
                 </tr>
+           
+             
             </thead>
             <tbody class="table-group-divider">
                 <tr *ngFor="let item of citasPendientes">
                     <td>
                         <p>{{item.codigoCita}}</p>
                     </td>
-                    <td>
-                        <p>{{item.cedulaPaciente}}</p>
-                    </td>
+                   
                     <td>
                         <p>{{item.nombrePaciente}}</p>
                     </td>
                     <td>
-                        <p>{{item.nombreMedico}}</p>
+                        <p>{{item.motivo}}</p>
                     </td>
-                    <td>
-                        <p>{{item.especialidad}}</p>
-                    </td>
-                    <td><span [ngClass]="item.estadoCita == 'PROGRAMADA' ? 'text-bg-success' :
-
-        'text-bg-danger'" class="badge">{{item.estadoCita}}</span></td>
+                 
+                 
                     <td>
                         <p>{{item.fecha}}</p>
                     </td>
 
-
+                    <td>
+                        <input type="checkbox" />
+                    </td>
 
                     <!--  <td><a routerLink="/detalle-pqrs/{{item.codigo}}"><i class="fa-solid
         
@@ -50,7 +45,10 @@
 
                 </tr>
             </tbody>
-        </table>
+        </table>
+<div class="d-flex justify-content-end">
+    <p><a class="btn btn-lg btn-primary button-effect" href="/atender-cita">Atender</a></p>
+</div>
 
     </div>
 </div>
@@ -67,91 +65,31 @@
             <thead>
                 <tr>
                     <th>Código Cita</th>
-                    <th>Cedula Paciente</th>
+                   
                     <th>Nombre Paciente</th>
-                    <th>Nombre Medico</th>
-                    <th>Especialidad</th>
-                    <th>Estado de la Cita</th>
+                   
+                    
+                    <th>Motivo</th>
                     <th>Fecha</th>
                 </tr>
             </thead>
             <tbody class="table-group-divider">
-                <tr *ngFor="let item of citasPendientes">
+                <tr *ngFor="let item of citasRealizadas">
                     <td>
                         <p>{{item.codigoCita}}</p>
                     </td>
-                    <td>
-                        <p>{{item.cedulaPaciente}}</p>
-                    </td>
+                   
                     <td>
                         <p>{{item.nombrePaciente}}</p>
                     </td>
                     <td>
-                        <p>{{item.nombreMedico}}</p>
+                        <p>{{item.motivo}}</p>
                     </td>
-                    <td>
-                        <p>{{item.especialidad}}</p>
-                    </td>
-                    <td><span [ngClass]="item.estadoCita == 'PROGRAMADA' ? 'text-bg-success' :
+                    
+                    
+                    <!--<td><span [ngClass]="item.estadoCita == 'PROGRAMADA' ? 'text-bg-success' :
 
-        'text-bg-danger'" class="badge">{{item.estadoCita}}</span></td>
-                    <td>
-                        <p>{{item.fecha}}</p>
-                    </td>
-
-
-
-                    <!--  <td><a routerLink="/detalle-pqrs/{{item.codigo}}"><i class="fa-solid
-        
-        fa-circle-info me-2"></i>Ver detalle</a></td> -->
-
-                </tr>
-            </tbody>
-        </table>
-
-    </div>
-</div>
-
-<div class="card" style="margin-top: 50px;">
-    <div class="card-header ps-5 pt-4 pb-4">
-        <h5 class="mb-0"><i class="fa-solid fa-comments me-3"></i>Listado de citas programadas</h5>
-    </div>
-
-    <div class="card-body p-5">
-
-        
-        <table class="table table-striped table-hover">
-            <thead>
-                <tr>
-                    <th>Código Cita</th>
-                    <th>Cedula Paciente</th>
-                    <th>Nombre Paciente</th>
-                    <th>Nombre Medico</th>
-                    <th>Especialidad</th>
-                    <th>Estado de la Cita</th>
-                    <th>Fecha</th>
-                </tr>
-            </thead>
-            <tbody class="table-group-divider">
-                <tr *ngFor="let item of citasPendientes">
-                    <td>
-                        <p>{{item.codigoCita}}</p>
-                    </td>
-                    <td>
-                        <p>{{item.cedulaPaciente}}</p>
-                    </td>
-                    <td>
-                        <p>{{item.nombrePaciente}}</p>
-                    </td>
-                    <td>
-                        <p>{{item.nombreMedico}}</p>
-                    </td>
-                    <td>
-                        <p>{{item.especialidad}}</p>
-                    </td>
-                    <td><span [ngClass]="item.estadoCita == 'PROGRAMADA' ? 'text-bg-success' :
-
-        'text-bg-danger'" class="badge">{{item.estadoCita}}</span></td>
+        'text-bg-danger'" class="badge">{{item.estadoCita}}</span></td>-->
                     <td>
                         <p>{{item.fecha}}</p>
                     </td>
@@ -168,5 +106,3 @@
 
     </div>
 </div>
-
-
