--- a/src/app/pagina/atender-cita/atender-cita.component.html
+++ b/src/app/pagina/atender-cita/atender-cita.component.html
@@ -26,14 +26,9 @@
             <div class="col-sm-10">
                 <input type="text" name="tratamiento" class="form-control" />
             </div>
-            <div class="mb-4 row">
-                <label class="col-sm-2 col-form-label">Codigo Cita: </label>
-                <div class="col-sm-10">
-                    <input type="text" name="codigo cita" class="form-control" />
-                </div>
         </div>
         <div style="display: flex; justify-content: end">
-            <button class="btn btn-success button-effect" type="submit">
+            <button class="btn btn-success button-effect" (click)="atenderCita()" type="submit">
                 <i class="fa-solid fa-circle-plus me-1"></i>Guardar
             </button>
         </div>
