--- a/src/app/pagina/login/login.component.html
+++ b/src/app/pagina/login/login.component.html
@@ -65,8 +65,8 @@
 <!--------------------------------------------------- FIN BOTON MODO OSCURO -------------------------------------------------->
   
 <main class="form-signin w-100 m-auto">
-<form style="margin-top: 100px; margin-bottom: 20px;">
-  <svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" fill="currentColor" class="bi bi-person" viewBox="0 0 16 16">
+  <form style="margin-top: 100px; margin-bottom: 20px;" (ngSubmit)="login()">
+    <svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" fill="currentColor" class="bi bi-person" viewBox="0 0 16 16">
       <path d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6Zm2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0Zm4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4Zm-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10c-2.29 0-3.516.68-4.168 1.332-.678.678-.83 1.418-.832 1.664h10Z"/>
     </svg>
   <h1 class="h3 mb-3 fw-normal">Por favor inicia sesión</h1>
@@ -89,8 +89,8 @@
       </div>
       <a href="/olvido-contrasenia" class="text-decoration-none">¿Olvidaste tu contraseña?</a>
   </div>
-  <button class="btn btn-primary w-100 py-2 button-effect" routerLink="/inicio-paciente" type="submit">Iniciar sesión</button>
-  
+  <button class="btn btn-primary w-100 py-2 button-effect" type="button" (click)="login()">Iniciar sesión</button>
+
 </form>
 </main>
 <script src="/assets/js/bootstrap.bundle.min.js"></script>
