--- a/src/app/pagina/gestion-citas/gestion-citas.component.html
+++ b/src/app/pagina/gestion-citas/gestion-citas.component.html
@@ -81,7 +81,10 @@
       <div class="mb-3">
           <button type="button" routerLink="/agendar-cita" class="btn btn-success me-2"><i
                   class="fa-solid fa-plus me-1"></i>Registrar Cita</button>
+                  <button type="button" routerLink="/filtrar-citas" class="btn btn-success me-2"><i
+                    class="fa-solid fa-plus me-1"></i>Ver lista Citas</button>
       </div>
+      
       <table class="table table-striped table-hover">
           <thead>
               <tr>
